Fix left-content spacing

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -12,9 +12,9 @@
       gap: 180px !important;
 
       .logo {
-        margin-right: 100px;
         max-width: 275px;
         max-height: 80px;
+        top: 100px;
       }
 
       h2 {
@@ -44,6 +44,7 @@
           border-radius: 40px !important;
           font-size: 25px;
           font-weight: $font-weight-regular;
+          height: 65px;
         }
 
         .btn-outline-dark {
